#~~~~~~~~~~~~~~~~
# 2013/06/07
#~~~~~~~~~~~~~~~~
FLBEIA 1.3
Changes from version 1.2:
- BEIA now it is called FLBEIA for coherence with other FLR libraries (FLXSA for example).
- creator functions added to ease the creation of control objects. 
		"create.advice.ctrl" (
  		"create.assess.ctrl"
  		"create.biols.ctrl"
  		"create.fleets.ctrl"
  		"create.covars.ctrl" 
  		"create.obs.ctrl"
- Names of observation model functions and arguments changed to give them coherence and ease their identification.
FUNCTIONS	** OLD **	 ** NEW **
		Obs.ages	Obs.stk.nage	
		Obs.mwgt	Obs.stk.wgt		
		Obs.fec		Obs.fec
		Obs.laage	Obs.land.nage	
		obs.lwta	land.wgt.obs
		Obs.daage	Obs.disc.nage		
		obs.dwta	disc.wgt.obs
		Obs.wtal	Obs.land.wgt		
		Obs.wtad	Obs.disc.wgt			
		Obs.btot	Obs.stk.bio		
		Obs.tland	Obs.land.bio		
		Obs.tdisc	Obs.disc.bio		

ARGUMENTS	** OLD **	 ** NEW **
		error.ages	ages.error	
		varia.ntot	stk.nage.error	
		varia.mwgt	stk.wgt.error
		Var.mort	Obs.nmort		
		varia.mort	nmort.error
		varia.fec	fec.error
		Var.nyr		REMOVED
		varia.ny	REMOVED
		varia.ltot	land.nage.error
		varia.dtot	disc.nage.error
		varia.mwgt	land.wgt.error
		varia.dwgt	disc.wgt.error
		varia.btot	stk.bio.error
		varia.tdisc	disc.bio.error
		varia.tland    	land.bio.error
		
REMOVED: varia.tdias	
	 Obs.tlaas	
	 varia.tland	
	 Obs.tdias		

#~~~~~~~~~~~~~~~~
# 2013/02/08
#~~~~~~~~~~~~~~~~
FLBEIA 1.2
Changes from version 1.0:
- Changes for allowing assessment in different seasons and multiannual advice
- Bugs fixed: in fixedPopulation function	 
              regarding stocks object
- New HCRs added: NEA mackerel + Bay of Biscay anchovy management plans
- Added new SRR: ctRec_alb (OM_1a1_Stock_Recruitment_functions)
- Interaction of covariables with SRs added
- Correction for cases when TAC it's not set for natural year
  OM_2_fleet.om.R     : call to updateCatch - added advice.ctrl parameter
  OM_2b_Update.catch.R: updateCatch     - added advice.ctrl parameter in eval call