@@ -4,6 +4,7 @@
 FLBEIA 1.3
 Changes from version 1.2:
 - BEIA now it is called FLBEIA for coherence with other FLR libraries (FLXSA for example).
+  Summary functions now called *_flbeia (before *_beia).
 - creator functions added to ease the creation of control objects. 
 		"create.advice.ctrl" (
   		"create.assess.ctrl"
